# reward-pool

./: .gitignore  Anchor.toml  Cargo.toml  README.md  build.sh  farming_pools.json  package-lock.json  package.json  reward_pool.json  todo.md  tsconfig.json
.circleci/: config.yml
.github/actions/setup-anchor-cli/: action.yml
.github/actions/setup-dep/: action.yml
.github/actions/setup-solana/: action.yml
.github/workflows/: ci.yml  ci_ts_main_on_push.yml  rust.yml
cli-staking/: Cargo.toml  README.md
cli-staking/src/: args.rs  main.rs
cli/dual-farming-cli/: Cargo.toml  README.MD
cli/dual-farming-cli/src/: args.rs  main.rs  utils.rs
cli/farming-cli/: Cargo.toml  README.MD
cli/farming-cli/src/: args.rs  main.rs  utils.rs
cli/locking-cli/: Cargo.toml  README.md
cli/locking-cli/src/: args.rs  main.rs  utils.rs
cli/single-farming-cli/: Cargo.toml  README.MD
cli/single-farming-cli/src/: args.rs  main.rs  utils.rs
cli/staking-cli/: Cargo.toml  README copy.md  README.MD
cli/staking-cli/src/: args.rs  main.rs  utils.rs
dual-farming-cli/: Cargo.toml  README.MD
dual-farming-cli/src/: utils.rs
migrations/: deploy.js
programs/dual-farming/: Cargo.toml
programs/dual-farming/src/: lib.rs  pool.rs  version.rs
programs/dual-farming/src/calculator/: mod.rs  pool_v1.rs  pool_v2.rs
programs/farming/: Cargo.toml
programs/farming/src/: lib.rs  pool.rs
programs/locking/: Cargo.toml
programs/locking/src/: lib.rs  vault.rs
programs/reward-pool/: Cargo.toml
programs/reward-pool/src/: calculator.rs  lib.rs  version.rs
programs/reward-pool/src/calculator/: mod.rs  pool_v1.rs  pool_v2.rs
programs/single-farming/: Cargo.toml
programs/single-farming/src/: lib.rs  state.rs
programs/staking/: Cargo.toml
programs/staking/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs  vault.rs
scripts/: mer_devnet.ts
tests/: Test.base.toml  clock.ts  clock_state.ts  reward-pool.js  user.js  utils.js
tests/dual-farming/: Test.toml  dual-farming.js  dual-farming.ts  reward-pool.js  single-reward.ts  user.js  utils.js  utils.ts
tests/dual-farming/keys/: prog-TeSTKchdpa2FKNV6gYNAENpququb3aT2r1pD41tZw36.json  xstep-tEsTL8G8drugWztoCKrPpEAXV21qEajfHg4q45KYs6s.json
tests/farming/: Test.toml  dual-farming-edge-case.ts  dual-farming.ts  reward_precision.ts  single-reward.ts  utils.ts
tests/locking/: Test.toml  locking.ts  staking-apy.ts  staking.ts  utils.ts  vault_state.ts
tests/single-farming/: Test.toml  farm_state.ts  reward-pool.js  single-farming-apy.ts  single-farming.js  single-farming.ts  user.js  user.ts  utils.ts
tests/staking/: Test.toml  apy.ts  mer_staking.ts  reward_precision.ts  single-farming-apy.ts  single-farming.ts  staking-apy.ts  staking.ts  user.ts  utils.ts
ts-client/: README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
ts-client/src/: constant.ts  farm.ts  index.ts  types.ts  utils.ts
ts-client/src/idl/: amm-idl.ts  farming-idl.ts
ts-client/src/tests/: farm.test.ts
