[package]
name = "farming"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "farming"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
devnet = []
verbose = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = { version = "~3.3.0", features = ["no-entrypoint"] }
solana-program = "1.10.29"
