[package]
name = "reward-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_pool"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

#add to default for local testing
#default = ["local-testing"]
local-testing = []

[dependencies]
anchor-lang = "0.16.2"
anchor-spl = "0.16.2"
solana-program = "1.7.7"

[dependencies.spl-token]
version = "3.1.1"
features = ["no-entrypoint"]