[package]
name = "reward-pool"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_pool"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
#add to default for local testing
#default = ["dev"]
#note, can also use `anchor test -- --features dev` now
dev = []
verbose = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.8.16"
