[package]
name = "reward-pool"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_pool"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

#add to default for local testing
#default = ["local-testing","test-id"]
#note, can also use `anchor test -- --feature local-testing,test-id` now
local-testing = []
test-id = []
verbose = []

[dependencies]
anchor-lang = "=0.21.0"
anchor-spl = "=0.21.0"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.8.5"
